Added Azure SQL Private DNS + Conditional Deploy

--- a/migrate-onpremises-sql-to-azure/azurePipelines.yml
+++ b/migrate-onpremises-sql-to-azure/azurePipelines.yml
@@ -1,3 +1,7 @@
+parameters:
+- name: deploymentType
+  type: string
+
 trigger:
   branches:
     exclude:
@@ -11,5 +15,6 @@ stages:
         parameters:
           buildAgent: 'windows-latest'
           deploymentAzureSubscriptionName: 'WingIt Airlines Demo'
+          deploymentType: ${{ parameters.deploymentType }}
           managementAzureSubscriptionName: 'Hubnet Cloud Consumption'
           variableGroupName: 'SQL_Migration_Demo'
