--- a/power-bi-embedded-reporting/application/b2b-portal/b2b-portal/b2b-portal.csproj
+++ b/power-bi-embedded-reporting/application/b2b-portal/b2b-portal/b2b-portal.csproj
@@ -15,6 +15,7 @@
     <PackageReference Include="Microsoft.Identity.Web.MicrosoftGraph" Version="2.16.0" />
     <PackageReference Include="Microsoft.Identity.Web.UI" Version="2.16.0" />
     <PackageReference Include="Microsoft.Identity.Web.DownstreamApi" Version="2.15.2" />
+    <PackageReference Include="Microsoft.PowerBI.Api" Version="4.18.0" />
   </ItemGroup>
 
 </Project>
