--- a/power-bi-embedded-reporting/application/b2c-portal/b2c-portal/b2c-portal.csproj
+++ b/power-bi-embedded-reporting/application/b2c-portal/b2c-portal/b2c-portal.csproj
@@ -8,4 +8,12 @@
     <AssemblyName>$(AssemblyName.Replace(' ', '_'))</AssemblyName>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Authorization" Version="8.0.3" />
+    <PackageReference Include="Microsoft.Data.SqlClient" Version="5.2.0" />
+    <PackageReference Include="Microsoft.Identity.Web" Version="2.17.4" />
+    <PackageReference Include="Microsoft.Identity.Web.UI" Version="2.17.4" />
+    <PackageReference Include="Microsoft.PowerBI.Api" Version="4.18.0" />
+  </ItemGroup>
+
 </Project>
