Upload next commit

--- a/power-bi-embedded-reporting/application/b2c-portal/b2c-portal/appsettings.json
+++ b/power-bi-embedded-reporting/application/b2c-portal/b2c-portal/appsettings.json
@@ -1,9 +1,39 @@
 {
+  "AllowedHosts": "*",
+  "APPLICATIONINSIGHTS_CONNECTION_STRING": "",
+  "ApplicationInsightsAgent_EXTENSION_VERSION": "",
+  "b2bClientId": "",
+  "b2bClientSecret": "",
+  "b2bPowerBIReportId": "",
+  "b2bPowerBIWorkspaceId": "",
+  "b2bTenantId": "",
+  "b2cConfiguration": {
+    "Instance": "",
+    "ClientId": "",
+    "CallbackPath": "",
+    "Domain": "",
+    "SignupSignInPolicyId": ""
+  },
+  "ConnectionStrings": {
+    "authenticationDBConnectionString": ""
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "XDT_MicrosoftApplicationInsights_Mode": "",
+  "AzureAd": {
+    "Instance": "https://pbiedemojohubbweu300324.b2clogin.com/",
+    "Domain": "pbiedemojohubbweu300324.onmicrosoft.com",
+    "TenantId": "4637e60a-7cea-470b-84b7-0ce6df1a80e5",
+    "ClientId": "7acf033c-083e-4a39-afd5-941f3ba90c9f",
+    "CallbackPath": "/signin-oidc",
+    "SignUpSignInPolicyId": "b2c_1_susi",
+    "SignedOutCallbackPath": "/signout/B2C_1_susi",
+    "ResetPasswordPolicyId": "b2c_1_reset",
+    "EditProfilePolicyId": "b2c_1_edit_profile",
+    "EnablePiiLogging": true
+  }
 }
