--- a/csharp-sandbox/csharp-sandbox/csharp-sandbox/csharp-sandbox.csproj
+++ b/csharp-sandbox/csharp-sandbox/csharp-sandbox/csharp-sandbox.csproj
@@ -11,7 +11,9 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Resources\" />
+    <Compile Remove="Resources\**" />
+    <EmbeddedResource Remove="Resources\**" />
+    <None Remove="Resources\**" />
   </ItemGroup>
 
 </Project>
